--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impacto do Desmatamento</title>
+    <title>Importância de árvores no meio urbano</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Impacto do Desmatamento</h1>
-        <img src=" aquii" alt="Foto das Cataratas do Iguaçu, um lugar com muitas árvores e mata nativa preservada.">
+        <h1>Importância de árvores no meio urbano</h1>
+        <img src="arvoreslago.jpg" alt="Foto do Lago Dourado em Dois Vizinhos (Paraná), lugar com muitas árvores.">
         <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
         <nav>
             <ul>
