--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
         <nav>
             <ul>
-                <li><a href="#problemas">Os Problemas</a></li>
+                <li><a href="#problemas">Problemas da falta e árvores</a></li>
                 <li><a href="#consequencias">Consequências</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
             </ul>
@@ -38,7 +38,7 @@
                 <p>A destruição das florestas impacta a biodiversidade, aumenta a poluição e reduz o contato com áreas verdes, afetando a saúde mental e respiratória.</p>
             </article>
 
-            <a href="https://www.youtube.com/watch?v=ILh7nDEKGqc&pp=ygUXSW1wYWN0byBkbyBEZXNtYXRhbWVudG8%3D" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
+            <a href="https://youtu.be/XPSwGT1XYsw?si=sP8ksRoGIV9cTnuO" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </section>
 
         <section id="consequencias" class="conteudo">
