--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>A destruição das florestas impacta a biodiversidade, aumenta a poluição e reduz o contato com áreas verdes, afetando a saúde mental e respiratória.</p>
             </article>
 
-            <a href="https://youtu.be/XPSwGT1XYsw?si=sP8ksRoGIV9cTnuO" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
+            <a href="https://www.youtube.com/watch?v=XPSwGT1XYsw" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </section>
 
         <section id="consequencias" class="conteudo">
