--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
         <nav>
             <ul>
-                <li><a href="#problemas">Problemas da falta e árvores</a></li>
+                <li><a href="#problemas">Problemas da falta de árvores</a></li>
                 <li><a href="#consequencias">Consequências</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
             </ul>
