--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>A destruição das florestas impacta a biodiversidade, aumenta a poluição e reduz o contato com áreas verdes, afetando a saúde mental e respiratória.</p>
             </article>
 
-            <a href="https://www.youtube.com/watch?v=IIh7nDEkGqc&pp=ygUXSW1wYWN0byBkbyBEZXMgbWF0YW1lbnQ%3D" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
+            <a href="https://www.youtube.com/watch?v=WDVf7HhS0ew" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </section>
 
         <section id="consequencias" class="conteudo">
@@ -56,7 +56,7 @@
         <section id="conclusao" class="conteudo">
             <h2>Conclusão</h2>
             <p>O desmatamento impacta diretamente a vida humana. Para evitar suas consequências, é necessário preservar o meio ambiente, investir em reflorestamento e adotar práticas sustentáveis.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=IIh7nDEkGqc&pp=ygUXSW1wYWN0byBkbyBEZXMgbWF0YW1lbnQ%3D" title="YouTube video."></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=WDVf7HhS0ew" title="YouTube video."></iframe>
         </section>
     </main>
 
