--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Importância de árvores no meio urbano</title>
+    <title> Arborização no meio urbano </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="area-verde">
-        <h1>Importância de árvores no meio urbano</h1>
+        <h1> Arborização no meio urbano</h1>
         <img src="arvoreslago.jpg" alt="Foto do Lago Dourado em Dois Vizinhos (Paraná), lugar com muitas árvores." class="imagem-centralizada">
         <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
         <nav>
