--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section id="conclusao" class="conteudo">
             <h2> Conclusão</h2>
             <p>O desmatamento impacta diretamente a vida humana. Para evitar suas consequências, é necessário preservar o meio ambiente, investir em reflorestamento e adotar práticas sustentáveis.</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/WDVf7HhS0ew" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <center><iframe width="560" height="315" src="https://www.youtube.com/embed/WDVf7HhS0ew" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         </section>
     </main>
 
