--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="#problemas">Problemas da falta de árvores</a></li>
-                <li><a href="#consequencias">Consequências</a></li>
+                <li><a href="#beneficios">Benefícios</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
             </ul>
         </nav>
@@ -41,7 +41,7 @@
             <a href="https://www.youtube.com/watch?v=GU2HabAxQAQ" class="cta-button" target="_blank">Como impacta a vida das pessoas? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
         </section>
 
-        <section id="consequencias" class="conteudo">
+        <section id="beneficios" class="conteudo">
             <h2> Consequências</h2>
             <ul>
                  Aumento das enchentes e erosão do solo</li>
