--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
 
         <section id="beneficios" class="conteudo">
-            <h2> Consequências</h2>
+            <h2> Benefícios</h2>
             <ul>
                  Aumento das enchentes e erosão do solo</li>
                  Aumento das temperaturas e mudanças climáticas</li>
