--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
         <section id="conclusao" class="conteudo">
             <h2> Conclusão</h2>
-            <p>O desmatamento impacta diretamente a vida humana. Para evitar suas consequências, é necessário preservar o meio ambiente, investir em reflorestamento e adotar práticas sustentáveis.
-                
+            <p>A falta de árvores impacta a vida humana. Para evitar suas consequências, é necessário plantar e cuidar de árvores em áreas urbanas, sendo em espaços públicos ou privados.
+
             </p>
             <center><iframe width="560" height="315" src="https://www.youtube.com/embed/WDVf7HhS0ew" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
         </section>
