--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <article>
                 <h3>Redução da qualidade de vida</h3>
-                <p>A destruição das florestas impacta a biodiversidade, aumenta a poluição e reduz o contato com áreas verdes, afetando a saúde mental e respiratória.</p>
+                <p>É visto que as árvores proporcionam um ambiente mais puro e equilibrado, assim, com a falta delas a poluição crese e é reduzido o contato com áreas verdes da população urbana, o que afeta a saúde mental e respiratória.</p>
             </article>
 
             <a href="https://www.youtube.com/watch?v=GU2HabAxQAQ" class="cta-button" target="_blank">Como impacta a vida das pessoas? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
