--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="area-verde">
         <h1> Arborização no meio urbano</h1>
         <img src="arvoreslago.jpg" alt="Foto do Lago Dourado em Dois Vizinhos (Paraná), lugar com muitas árvores." class="imagem-centralizada">
-        <p>O desmatamento intensifica fenômenos negativos no meio ambiente e na vida das pessoas, afetando enchentes, temperatura e qualidade de vida.</p>
+        <p>A arborização urbana trás pontos positivos a população e meio ambiente, já que reduz o impacto de enchentes, a temperatura e aumenta a qualidade de vida.</p>
         <nav>
             <ul>
                 <li><a href="#problemas">Problemas da falta de árvores</a></li>
