--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <section id="problemas" class="conteudo">
-            <h2> Os Problemas</h2>
+            <h2> Problemas da falta de árvores</h2>
             <article>
                 <h3>Aumento das enchentes</h3>
                 <p>As árvores absorvem a água da chuva e ajudam na infiltração no solo. Sem vegetação, a água escoa rapidamente, causando enchentes.</p>
