--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
         <section id="beneficios" class="conteudo">
             <h2> Benefícios</h2>
             <ul>
-                 <li>Aumento das enchentes e erosão do solo</li>
+                 <center>
+                <li>Aumento das enchentes e erosão do solo</li>
                  <li>Aumento das temperaturas e mudanças climáticas</li>
                  <li>Perda da biodiversidade</li>
                  <li>Redução da qualidade de vida nas cidades</li>
                  <li>Agravamento de problemas de saúde</li>
                  <li>Impacto na economia de comunidades locais</li>
+                 </center>
             </ul>
         </section>
 
