--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2> Benefícios</h2>
             <ul>
                  <center>
-                <li>Aumento das enchentes e erosão do solo</li>
+                <p>Aumento das enchentes e erosão do solo</p>
                  <li>Aumento das temperaturas e mudanças climáticas</li>
                  <li>Perda da biodiversidade</li>
                  <li>Redução da qualidade de vida nas cidades</li>
