--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <ul>
                  <center>
                 <p>Aumento das enchentes e erosão do solo</p>
-                 <li>Aumento das temperaturas e mudanças climáticas</li>
-                 <li>Perda da biodiversidade</li>
-                 <li>Redução da qualidade de vida nas cidades</li>
-                 <li>Agravamento de problemas de saúde</li>
-                 <li>Impacto na economia de comunidades locais</li>
+                 <p>Aumento das temperaturas e mudanças climáticas</p>
+                 <p>Perda da biodiversidade</p>
+                 <p>Redução da qualidade de vida nas cidades</p>
+                 <p>Agravamento de problemas de saúde</p>
+                 <p>Impacto na economia de comunidades locais</p>
                  </center>
             </ul>
         </section>
