--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2> Benefícios</h2>
             <ul>
                  <center>
-                <p>Aumento das enchentes e erosão do solo</p>
+                <p><li>Aumento das enchentes e erosão do solo</li></p>
                  <p>Aumento das temperaturas e mudanças climáticas</p>
                  <p>Perda da biodiversidade</p>
                  <p>Redução da qualidade de vida nas cidades</p>
