--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
             <h2> Benefícios</h2>
             <ul>
                  <center>
-                <p><li>Aumento das enchentes e erosão do solo</li></p>
+                    <br>
+                <p>Aumento das enchentes e erosão do solo</p>
                  <p>Aumento das temperaturas e mudanças climáticas</p>
                  <p>Perda da biodiversidade</p>
                  <p>Redução da qualidade de vida nas cidades</p>
                  <p>Agravamento de problemas de saúde</p>
                  <p>Impacto na economia de comunidades locais</p>
+                    </br>
                  </center>
             </ul>
         </section>
