--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     
                  <p>Redução do impacto de enchentes e erosão do solo</p>
                  <p>Reduz as altas temperaturas </p>
-                 <p>Perda da biodiversidade</p>
+                 <p>Melhora a qualidade do ar</p>
                  <p>Aumento da qualidade de vida nas cidades</p>
                  <p>Redução de problemas de saúde</p>
                 
