--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2> Problemas da falta de árvores</h2>
             <article>
                 <h3>Aumento das enchentes</h3>
-                <p>As árvores absorvem a água da chuva e ajudam na infiltração no solo. Sem vegetação, a água escoa rapidamente, causando enchentes.</p>
+                <p>As árvores absorvem a água da chuva e ajudam na infiltração no solo, sem elas, a água escoa rapidamente, causando enchentes.</p>
             </article>
 
             <article>
