--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </main>
 
     <footer>
-        <a href="https://www.linkedin.com/in/femascheti" class="cta-footer">Faça parte dessa causa!</a>
-        <p>2025 | @femascheti</p>
+        <a href="jessicaheckler2843@gmail.com" class="cta-footer">Faça parte dessa causa!</a>
+        <p>2025 | Jéssica </p>
     </footer>
 </body>
 </html>
