--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <article>
                 <h3>Redução da qualidade de vida</h3>
-                <p>É visto que as árvores proporcionam um ambiente mais puro e equilibrado, assim, com a falta delas, a poluição cresce e é reduzido o contato com áreas verdes da população urbana, o que afeta a saúde mental e física.</p>
+                <p>As árvores proporcionam um ambiente relaxante, com elas em falta trariam problemas mentais ou físicos, e, já é comprovado que passar o tempo em ambientes com áreas verdes reduz o estresse e ansiedade. Para a saúde física se pode ir em lugares como bosques, lagos, florestas com árvores ao redor para fazr caminhadas, corrida, ou trilhas.  .</p>
             </article>
 
             <a href="https://www.youtube.com/watch?v=GU2HabAxQAQ" class="cta-button" target="_blank">Como impacta a vida das pessoas? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
